--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@egjs/vue3-flicking": "^4.11.4",
     "@nuxt/image": "^1.7.0",
+    "@nuxtjs/seo": "^2.0.0-rc.18",
     "@nuxtjs/tailwindcss": "^6.12.1",
     "nuxt": "^3.12.3",
     "primeicons": "^7.0.0",
@@ -19,9 +20,11 @@
     "vue": "latest"
   },
   "devDependencies": {
+    "@nuxtjs/color-mode": "^3.4.2",
     "@primevue/nuxt-module": "^4.0.4",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.41",
-    "tailwindcss": "^3.4.7"
+    "tailwindcss": "^3.4.7",
+    "tailwindcss-dark-mode": "^1.1.7"
   }
 }
