--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxt/image": "^1.7.0",
     "@nuxtjs/seo": "^2.0.0-rc.18",
     "@nuxtjs/tailwindcss": "^6.12.1",
+    "markdown-it": "^14.1.0",
     "nuxt": "^3.12.3",
     "primeicons": "^7.0.0",
     "primevue": "^4.0.4",
